cards alignment issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,13 @@
 }
 #cardMain{
   width: 370px;
-  /* height: 500px; */
+  height: auto;
   background-color: rgb(255, 255, 255);
   display: flex;
   padding: 1rem ;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   border-radius: 1rem;
   box-shadow: 2px -1px 4px 3px #ede2e2;
   margin: auto;
@@ -21,6 +23,7 @@
   
   
 }
+
 #post{
   width: 150px;
   padding: 2px;
@@ -31,6 +34,7 @@
   align-items: center;
   justify-content:center;
   margin-top:1rem;
+  border: 0.1px solid rgb(231, 231, 231);
 
 }
 #post p{
@@ -45,6 +49,7 @@
   cursor: pointer;
 }
 .apply{
+  width: 100%;
   margin-top:15px;
   height:40px;
   border-radius:0.4rem;
@@ -76,25 +81,24 @@
 }
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Three cards per row */
-  gap: 0px; /* Spacing between cards */
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 0px;
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  align-self: center;
-  /* align-items: start; */
+  align-items: start;
 
 }
 
 @media screen and (max-width: 768px) {
   .card-grid {
-    grid-template-columns: repeat(2, 1fr); /* Two cards per row */
+    grid-template-columns: repeat(2, 1fr); 
   }
 }
 
 @media screen and (max-width: 480px) {
   .card-grid {
-    grid-template-columns: 1fr; /* One card per row */
+    grid-template-columns: 1fr; 
     width: 100%;
 
   }
